backend auth ready for frontend auth

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="comethrough">
   <head>
     <meta charset="utf-8">
     <title>Come Through</title>
@@ -10,5 +10,6 @@
   </head>
   <body>
     <h1>Comethrough</h1>
+    {{1+1}}
   </body>
 </html>
