--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     <!-- endinject -->
   </head>
   <body>
-    <h1>Comethrough</h1>
-    {{1+1}}
+    <header ng-controller="MainCtrl as main">
+      <h1>Comethrough</h1>
+    </header>
+    <main ui-view></main>
   </body>
 </html>
