added router, views

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Come Through</title>
+    <base href="/">
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
