--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
   <body>
     <header ng-controller="MainCtrl as main">
       <h1>Comethrough</h1>
+      <ul>
+        <li ng-hide="main.user"><a ui-sref="login">/login</a></li>
+        <li ng-hide="main.user"><a ui-sref="register">/register</a></li>
+        <li ng-show="main.user">Welcome, {{main.user.firstname}}</li>
+        <li ng-show="main.user"><a ui-sref="usersIndex">/users</a></li>
+        <li ng-show="main.user"><a ng-click="main.logout()">/logout</a></li>
+      </ul>
     </header>
     <main ui-view></main>
   </body>
